add user , register and login
